Conditionally_Complete_Lattices.   INCOMPATIBILITY.

* Introduce bdd_above and bdd_below in Conditionally_Complete_Lattices, use them
instead of explicitly stating boundedness of sets.

* ccpo.admissible quantifies only over non-empty chains to allow
more syntax-directed proof rules; the case of the empty chain
shows up as additional case in fixpoint induction proofs.
INCOMPATIBILITY

* Nitpick:
  - Fixed soundness bug whereby mutually recursive datatypes could take
    infinite values.

* HOL-Multivariate_Analysis:
  - type class ordered_real_vector for ordered vector spaces
  - changed order of ordered_euclidean_space to be compatible with
    pointwise ordering on products. Therefore instance of
    conditionally_complete_lattice and ordered_real_vector.
    INCOMPATIBILITY: use box instead of greaterThanLessThan or
    explicit set-comprehensions with eucl_less for other (half-) open
    intervals.


*** ML ***

* Toplevel function "use" refers to raw ML bootstrap environment,
without Isar context nor antiquotations.  Potential INCOMPATIBILITY.
Note that 'ML_file' is the canonical command to load ML files into the
formal context.

* Proper context for basic Simplifier operations: rewrite_rule,
rewrite_goals_rule, rewrite_goals_tac etc. INCOMPATIBILITY, need to
pass runtime Proof.context (and ensure that the simplified entity
actually belongs to it).


*** System ***

* Simplified "isabelle display" tool.  Settings variables DVI_VIEWER
and PDF_VIEWER now refer to the actual programs, not shell
command-lines.  Discontinued option -c: invocation may be asynchronous
via desktop environment, without any special precautions.  Potential
INCOMPATIBILITY with ambitious private settings.

* Improved 'display_drafts' concerning desktop integration and
repeated invocation in PIDE front-end: re-use single file
$ISABELLE_HOME_USER/tmp/drafts.pdf and corresponding views.



New in Isabelle2013-2 (December 2013)
-------------------------------------
